lang.java.statics.test/tests/positive/packages/class-in-same-package-shadows-on-demand-imported-class.yes.javtest
STATIX ok
JAVAC  ok

[p] {

    [A]
    package p;
    import q.*;
    public class A {
        public B b = (p.B) null;
    }

    [B]
    package p;
    public class B {}

}

[q] {

    [B]
    package q;
    public class B {}

}
