lang.java.statics.test/tests/negative/classes/innerinnerclasssamename.no.javtest
STATIX fail java\.duplicates\.no-enclosing-type-same-name.*Id\(\"C\"\)
JAVAC  fail class C is already defined in package unnamed package

[C]
public class C {
    public class B {
        public class C {}
    }
}
